[package]
name = "aloo_emu"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
pixels = "0.6.0"
winit = "0.25"
winit_input_helper = "0.10"
env_logger = "0.9"
log = "0.4"